[gd_scene load_steps=6 format=2]

[ext_resource path="res://Data/UI/EditorTheme.tres" type="Theme" id=1]
[ext_resource path="res://Data/Editor/Item/Object/ObjectConfig.gd" type="Script" id=3]
[ext_resource path="res://Data/Editor/AntiCursor.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.905882, 0.835294, 0.698039, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id=4]
content_margin_bottom = 2.0
bg_color = Color( 0.905882, 0.835294, 0.698039, 1 )

[node name="ObjectConfig" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 264.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = -24.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="P" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Ctl" type="VBoxContainer" parent="P"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="TC" type="HBoxContainer" parent="P/Ctl"]
margin_right = 126.0
margin_bottom = 12.0
script = ExtResource( 4 )

[node name="TL" type="Label" parent="P/Ctl/TC"]
margin_right = 62.0
margin_bottom = 12.0
text = "Transform"
script = ExtResource( 4 )

[node name="Transform" type="PanelContainer" parent="P/Ctl"]
show_behind_parent = true
margin_top = 16.0
margin_right = 126.0
margin_bottom = 104.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Transform"]
margin_left = 8.0
margin_top = 4.0
margin_right = 118.0
margin_bottom = 84.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/Transform/Vbc"]
margin_right = 110.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc"]
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="X" type="Label" parent="P/Ctl/Transform/Vbc/Hbc/Vbc"]
margin_right = 32.0
margin_bottom = 12.0
text = "X"
script = ExtResource( 4 )

[node name="SXPos" type="LineEdit" parent="P/Ctl/Transform/Vbc/Hbc/Vbc"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="Y" type="Label" parent="P/Ctl/Transform/Vbc/Hbc/Vbc2"]
margin_right = 32.0
margin_bottom = 12.0
text = "Y"
script = ExtResource( 4 )

[node name="SYPos" type="LineEdit" parent="P/Ctl/Transform/Vbc/Hbc/Vbc2"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc3" type="VBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc"]
margin_left = 72.0
margin_right = 110.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="Angle" type="Label" parent="P/Ctl/Transform/Vbc/Hbc/Vbc3"]
margin_right = 38.0
margin_bottom = 12.0
text = "Angle"
script = ExtResource( 4 )

[node name="A" type="LineEdit" parent="P/Ctl/Transform/Vbc/Hbc/Vbc3"]
margin_top = 16.0
margin_right = 38.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="Scl" type="Label" parent="P/Ctl/Transform/Vbc"]
margin_top = 36.0
margin_right = 110.0
margin_bottom = 44.0
custom_styles/normal = SubResource( 4 )
text = "Scale"
script = ExtResource( 4 )

[node name="Hbc2" type="HBoxContainer" parent="P/Ctl/Transform/Vbc"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 80.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc2"]
margin_right = 68.0
margin_bottom = 32.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc"]
margin_right = 68.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc/Hbc"]
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="X" type="Label" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc/Hbc/Vbc"]
margin_right = 32.0
margin_bottom = 12.0
text = "X"
script = ExtResource( 4 )

[node name="XScl" type="LineEdit" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc/Hbc/Vbc"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc/Hbc"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="Y" type="Label" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc/Hbc/Vbc2"]
margin_right = 32.0
margin_bottom = 12.0
text = "Y"
script = ExtResource( 4 )

[node name="YScl" type="LineEdit" parent="P/Ctl/Transform/Vbc/Hbc2/Vbc/Hbc/Vbc2"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="MC" type="HBoxContainer" parent="P/Ctl"]
margin_top = 108.0
margin_right = 126.0
margin_bottom = 120.0
script = ExtResource( 4 )

[node name="ML" type="Label" parent="P/Ctl/MC"]
margin_right = 56.0
margin_bottom = 12.0
text = "Modulate"
script = ExtResource( 4 )

[node name="Modulate" type="PanelContainer" parent="P/Ctl"]
show_behind_parent = true
margin_top = 124.0
margin_right = 126.0
margin_bottom = 164.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Modulate"]
margin_left = 8.0
margin_top = 4.0
margin_right = 118.0
margin_bottom = 36.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbc" type="HBoxContainer" parent="P/Ctl/Modulate/Vbc"]
margin_right = 110.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="Vbc" type="VBoxContainer" parent="P/Ctl/Modulate/Vbc/Hbc"]
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="RL" type="Label" parent="P/Ctl/Modulate/Vbc/Hbc/Vbc"]
margin_right = 32.0
margin_bottom = 12.0
text = "Red"
script = ExtResource( 4 )

[node name="R" type="LineEdit" parent="P/Ctl/Modulate/Vbc/Hbc/Vbc"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc2" type="VBoxContainer" parent="P/Ctl/Modulate/Vbc/Hbc"]
margin_left = 36.0
margin_right = 74.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="GL" type="Label" parent="P/Ctl/Modulate/Vbc/Hbc/Vbc2"]
margin_right = 38.0
margin_bottom = 12.0
text = "Green"
script = ExtResource( 4 )

[node name="G" type="LineEdit" parent="P/Ctl/Modulate/Vbc/Hbc/Vbc2"]
margin_top = 16.0
margin_right = 38.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )

[node name="Vbc3" type="VBoxContainer" parent="P/Ctl/Modulate/Vbc/Hbc"]
margin_left = 78.0
margin_right = 110.0
margin_bottom = 32.0
script = ExtResource( 4 )

[node name="BL" type="Label" parent="P/Ctl/Modulate/Vbc/Hbc/Vbc3"]
margin_right = 32.0
margin_bottom = 12.0
text = "Blue"
script = ExtResource( 4 )

[node name="B" type="LineEdit" parent="P/Ctl/Modulate/Vbc/Hbc/Vbc3"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
text = "0"
script = ExtResource( 4 )
